Amelioration de la qualité de code avec sonarQube